# Leverage

./: .gitignore  CLAUDE.md
scripts/hlsm-bridge/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/hlsm-bridge/config/: weights.yaml
scripts/hlsm-bridge/migrations/: env.py
scripts/hlsm-bridge/tests/: conftest.py  fixtures_weights.yaml  test_convergence.py  test_dashboard_api.py  test_e2e_synthetic_convergence.py  test_exchange_contract.py  test_executor.py  test_exit_policy.py  test_hot_reload.py  test_one_per_coin_gate.py  test_reconstruct.py  test_safety.py  test_signal_cooldown.py  test_stats_and_scoring.py  test_telegram_format.py
scripts/scalping/: .dockerignore  .env.example  DEPLOY.md  README.md  add_sizing_withdrawal_config.py  docker-compose.yml  patch_cooldown.py  patch_heartbeat_startup.py  patch_kill_switch.py  pyproject.toml  regime_probe.py  set_cooldown_3_180.py
scripts/scalping/analysis/: eval_status.sh  final_views.py  inspect_sweep.py  optimal_params_sweep.py  v3_zec_sl_sweep.py  v3_zec_sl_sweep_2026-05-15.csv  zec_v3_realistic.py
scripts/scalping/backtest/: README.md  __init__.py  engine.py  metrics.py  optimizer.py  portfolio_backtest.py  portfolio_sim.py  regime.py  smoke_pipeline.py  validation.py
scripts/scalping/config/: blofin_bridge.v3.yaml  blofin_bridge.yaml
scripts/scalping/docs/: TV_ALERTS.md  v3-deploy-and-revert.md
scripts/scalping/hybrid/: data.py  optimize_specialists.py  report.py  run_hybrid.py  sweep_risk.py  switcher.py
scripts/scalping/tests/: conftest.py  test_atr.py  test_blofin_client.py  test_config.py  test_ema_retest.py  test_entry_gate.py  test_handlers.py  test_notify.py  test_notify_v32.py  test_policies.py  test_poller.py  test_router.py  test_signal_engine.py  test_signal_validator.py  test_signals.py  test_sizing.py  test_state.py  test_tg_commander.py  test_tv_timeframe.py  test_webhook_e2e.py  (+1 more)
(+858 files in other folders)
