[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hlsm-bridge"
version = "0.1.0"
description = "Hyperliquid Smart-Money Convergence -> BloFin paper auto-trader. Replaces SMC + Runner."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "ccxt==4.4.50",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "httpx==0.27.2",
    "PyYAML==6.0.2",
    "SQLAlchemy==2.0.36",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",
    "redis==5.2.0",
    "websockets==13.1",
    "python-telegram-bot==21.7",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "watchfiles==0.24.0",
    "aiohttp==3.10.10",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "aiosqlite==0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
